@@ -1,3 +1,9 @@
+2008-11-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/speller.c, src/gui.c:
+   Update to Geany API 108 - indicator functions renamed.
+
+
 2008-11-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/speller.c, src/speller.h, src/gui.c:
